# qtathon-mgst-space-suit

./: .gitignore  README.md
mgsthelmet/: CMakeLists.txt  DataLabel.qml  Env.qml  Main.qml  MissionSection.qml  MqttClientComponent.qml  NextTask.qml  Style.qml  SuitLevels.qml  SuitLevelsLabel.qml  SuitLevelsPane.qml  SuitLevelsSection.qml  main.cpp  qmlmqttclient.cpp  qmlmqttclient.h
tricorder/: CMakeLists.txt  Env.qml  Main.qml  MissionScreen.qml  MissionTasks.qml  Missions.qml  MqttClientComponent.qml  Style.qml  SuitData.qml  SuitDataScreen.qml  TasksDetails.js  TasksScreen.qml  TimerPanel.qml  Utils.qml  main.cpp  qmlmqttclient.cpp  qmlmqttclient.h
